SERVER-90712 Path-based decompression can get wrong answer with legacy interleaved sections (#23430)

GitOrigin-RevId: 87e73c24576638b2f59f387e8fb08f9cd5040bbd