src/mongo/bson/util/bsoncolumn_interleaved.h
@@ -365,6 +365,9 @@ const char* BlockBasedInterleavedDecompressor::decompressGeneral(
     absl::flat_hash_map<Buffer*, int32_t> bufferToPositions;
 
     {
+        // Keep track of how many elements we find so we can check that we found each one requested
+        // by the caller.
+        size_t foundElems = 0;
         BSONObjTraversal trInit{
             _traverseArrays,
             _rootType,
@@ -376,6 +379,7 @@ const char* BlockBasedInterleavedDecompressor::decompressGeneral(
                         }
                     }
                     posToBuffers.push_back(std::move(it->second));
+                    ++foundElems;
                 } else {
                     // An empty list to indicate that this element isn't being materialized.
                     posToBuffers.push_back({});
@@ -393,6 +397,7 @@ const char* BlockBasedInterleavedDecompressor::decompressGeneral(
                         b->template setLast<BSONElement>(elem);
                     }
                     posToBuffers.push_back(std::move(it->second));
+                    ++foundElems;
                 } else {
                     // An empty list to indicate that this element isn't being materialized.
                     posToBuffers.push_back({});
@@ -400,6 +405,10 @@ const char* BlockBasedInterleavedDecompressor::decompressGeneral(
                 return true;
             }};
         trInit.traverse(refObj);
+
+        // Sanity check: make sure that the number of elements we found during traversal matches the
+        // number of elements requested for materialization by the caller.
+        uassert(9071200, "Request for unknown element", elemToBuffer.size() == foundElems);
     }
 
     // Advance past the reference object to the compressed data of the first field.
